Fix Facade not found

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^8.1",
         "statamic/cms": "^4.0|^5.0",
-        "openai-php/client": "^v0.8.0"
+        "openai-php/client": "^v0.8.0",
+        "openai-php/laravel": "^v0.8.0"
     },
     "extra": {
         "statamic": {
